get project, feedback, faveico and footer

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Захар - начинающий Frontend Developer</title>
+    <title>Захар Иванов</title>
+    <link rel="icon" href="./img/3.png">
     <link rel="stylesheet" href="./css/bootstrap-grid.min.css">
     <link rel="stylesheet" href="./css/bootstrap-reboot.min.css">
     <link rel="stylesheet" href="./css/style.css">
@@ -15,7 +16,7 @@
         <header>
             <div class="container">
                 <h1>Захар Иванов</h1>
-                <div class="text-head">Начинающий Frontend Developer</div>
+                <div class="text-head">Front-end Developer</div>
                 <ul class="links">
                     <li>
                         <a href="https://t.me/aval0on" target="_ blank">
@@ -112,20 +113,36 @@
         <div class="projects">
             <div class="container">
                 <h2>Проекты</h2>
-                <div class="row">
-                  <div class="col">
-                    
-                  </div>
-                  <div class="col">
-                    Column
-                  </div>
-                  <div class="col">
-                    Column
-                  </div>
+                <div class="project-table">
+                    <a href="https://ivanovzakhar.github.io/Food-Dist/" target="_ blank" class="card">
+                        <img src="./img/fooddist.png" alt="card" class="img-card">
+                    </a>
+                    <a href="https://ivanovzakhar.github.io/devGaming/" target="_ blank" class="card">
+                        <img src="./img/devGaming.png" alt="card" class="img-card">
+                    </a>
+                    <a href="https://ivanovzakhar.github.io/slider-sources/" target="_ blank" class="card">
+                        <img src="./img/slider3.png" alt="card" class="img-card">
+                    </a>
                 </div>
-              </div>
+                <div class="project-table">
+                    <a href="https://ivanovzakhar.github.io/cards-sources/" target="_ blank" class="card">
+                        <img src="./img/card.png" alt="card" class="img-card">
+                    </a>
+                    <a href="https://ivanovzakhar.github.io/inventory/" target="_ blank" class="card">
+                        <img src="./img/inventory.png" alt="card" class="img-card">
+                    </a>
+                    <a href="https://ivanovzakhar.github.io/aim-game-sources/" target="_ blank" class="card">
+                        <img src="./img/aimgame.png" alt="card" class="img-card">
+                    </a>
+                </div>
+            </div>
         </div>
+        <div class="feedback">
+            <button class="feedback-btn"><a href="https://t.me/aval0on" target="_ blank">Связаться со мной</a></button>
+        </div>
+        <footer>© Захар Иванов</footer>
     </main>
     <script src="https://kit.fontawesome.com/53dd121d00.js" crossorigin="anonymous"></script>
+    <script src="/script.js"></script>
 </body>
 </html>
