--- a/index.html
+++ b/index.html
@@ -115,24 +115,22 @@
                 <h2>Проекты</h2>
                 <div class="project-table">
                     <a href="https://ivanovzakhar.github.io/Food-Dist/" target="_ blank" class="card">
-                        <img src="./img/fooddist.png" alt="card" class="img-card">
+                        fooddist
                     </a>
                     <a href="https://ivanovzakhar.github.io/devGaming/" target="_ blank" class="card">
-                        <img src="./img/devGaming.png" alt="card" class="img-card">
+                        devGaming
                     </a>
                     <a href="https://ivanovzakhar.github.io/slider-sources/" target="_ blank" class="card">
-                        <img src="./img/slider3.png" alt="card" class="img-card">
+                        slider
                     </a>
-                </div>
-                <div class="project-table">
                     <a href="https://ivanovzakhar.github.io/cards-sources/" target="_ blank" class="card">
-                        <img src="./img/card.png" alt="card" class="img-card">
+                        cards
                     </a>
                     <a href="https://ivanovzakhar.github.io/inventory/" target="_ blank" class="card">
-                        <img src="./img/inventory.png" alt="card" class="img-card">
+                        inventory
                     </a>
                     <a href="https://ivanovzakhar.github.io/aim-game-sources/" target="_ blank" class="card">
-                        <img src="./img/aimgame.png" alt="card" class="img-card">
+                       aim-Game
                     </a>
                 </div>
             </div>
