--- a/index.html
+++ b/index.html
@@ -114,6 +114,9 @@
             <div class="container">
                 <h2>Проекты</h2>
                 <div class="project-table">
+                    <a href="https://ivanovzakhar.github.io/emloyers/" target="_ blank" class="card">
+                        emloyers
+                     </a>
                     <a href="https://ivanovzakhar.github.io/Food-Dist/" target="_ blank" class="card">
                         fooddist
                     </a>
@@ -132,6 +135,7 @@
                     <a href="https://ivanovzakhar.github.io/aim-game-sources/" target="_ blank" class="card">
                        aim-Game
                     </a>
+
                 </div>
             </div>
         </div>
