--- a/index.html
+++ b/index.html
@@ -115,22 +115,22 @@
                 <h2>Проекты</h2>
                 <div class="project-table">
                     <a href="https://ivanovzakhar.github.io/Food-Dist/" target="_ blank" class="card">
-                        fooddist
+                        Fooddist
                     </a>
                     <a href="https://ivanovzakhar.github.io/devGaming/" target="_ blank" class="card">
-                        devGaming
+                        DevGaming
                     </a>
                     <a href="https://ivanovzakhar.github.io/slider-sources/" target="_ blank" class="card">
-                        slider
+                        Slider
                     </a>
                     <a href="https://ivanovzakhar.github.io/cards-sources/" target="_ blank" class="card">
-                        cards
+                        Cards
                     </a>
                     <a href="https://ivanovzakhar.github.io/inventory/" target="_ blank" class="card">
-                        inventory
+                        Inventory
                     </a>
                     <a href="https://ivanovzakhar.github.io/aim-game-sources/" target="_ blank" class="card">
-                       aim-Game
+                       Aim-Game
                     </a>
 
                 </div>
