--- a/index.html
+++ b/index.html
@@ -120,6 +120,9 @@
                     <a href="https://ivanovzakhar.github.io/devGaming/" target="_ blank" class="card">
                         DevGaming
                     </a>
+                    <a href="https://ivanovzakhar.github.io/lsot-shirt/" target="_ blank" class="card">
+                        Lsot-shirt
+                    </a>
                     <a href="https://ivanovzakhar.github.io/slider-sources/" target="_ blank" class="card">
                         Slider
                     </a>
