--- a/index.html
+++ b/index.html
@@ -135,6 +135,9 @@
                     <a href="https://ivanovzakhar.github.io/aim-game-sources/" target="_ blank" class="card">
                        Aim-Game
                     </a>
+                    <a href="https://ivanovzakhar.github.io/buildMarvel/" target="_ blank" class="card">
+                        Marvel information-portal
+                     </a>
 
                 </div>
             </div>
