update list projects

--- a/index.html
+++ b/index.html
@@ -134,11 +134,10 @@
                     </a>
                     <a href="https://ivanovzakhar.github.io/aim-game-sources/" target="_ blank" class="card">
                        Aim-Game
-                    </a>
-                    <a href="https://ivanovzakhar.github.io/buildMarvel/" target="_ blank" class="card">
-                        Marvel information-portal
+                    </a> 
+                     <a href="https://арсеналъ-1.рф/catalog" target="_ blank" class="card">
+                        Интернет магазин АрсеналЪ
                      </a>
-
                 </div>
             </div>
         </div>
